Update observed commands

--- a/tests/test_cases/2019/commands/7B0.7B8.2103.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.2103.yaml
@@ -122,6 +122,16 @@ test_cases:
     TOYOTA_TS_FR: 5.12
     TOYOTA_TS_RL: 5.12
     TOYOTA_TS_RR: 5.12
+- response: 7B806610304050504
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 6.4
+    TOYOTA_TIRE_FR_SPD: 5.12
+    TOYOTA_TIRE_RL_SPD: 5.12
+    TOYOTA_TIRE_RR_SPD: 6.4
+    TOYOTA_TS_FL: 6.4
+    TOYOTA_TS_FR: 5.12
+    TOYOTA_TS_RL: 5.12
+    TOYOTA_TS_RR: 6.4
 - response: 7B806610304050505
   expected_values:
     TOYOTA_TIRE_FL_SPD: 6.4
@@ -162,6 +172,16 @@ test_cases:
     TOYOTA_TS_FR: 6.4
     TOYOTA_TS_RL: 6.4
     TOYOTA_TS_RR: 6.4
+- response: 7B806610305060405
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 7.68
+    TOYOTA_TIRE_FR_SPD: 6.4
+    TOYOTA_TIRE_RL_SPD: 6.4
+    TOYOTA_TIRE_RR_SPD: 5.12
+    TOYOTA_TS_FL: 7.68
+    TOYOTA_TS_FR: 6.4
+    TOYOTA_TS_RL: 6.4
+    TOYOTA_TS_RR: 5.12
 - response: 7B806610306050605
   expected_values:
     TOYOTA_TIRE_FL_SPD: 6.4
@@ -232,6 +252,16 @@ test_cases:
     TOYOTA_TS_FR: 8.96
     TOYOTA_TS_RL: 10.24
     TOYOTA_TS_RR: 8.96
+- response: 7B806610308080808
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 10.24
+    TOYOTA_TIRE_FR_SPD: 10.24
+    TOYOTA_TIRE_RL_SPD: 10.24
+    TOYOTA_TIRE_RR_SPD: 10.24
+    TOYOTA_TS_FL: 10.24
+    TOYOTA_TS_FR: 10.24
+    TOYOTA_TS_RL: 10.24
+    TOYOTA_TS_RR: 10.24
 - response: 7B8066103080A0709
   expected_values:
     TOYOTA_TIRE_FL_SPD: 12.8
@@ -292,6 +322,16 @@ test_cases:
     TOYOTA_TS_FR: 11.52
     TOYOTA_TS_RL: 12.8
     TOYOTA_TS_RR: 10.24
+- response: 7B80661030A090A09
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 11.52
+    TOYOTA_TIRE_FR_SPD: 12.8
+    TOYOTA_TIRE_RL_SPD: 11.52
+    TOYOTA_TIRE_RR_SPD: 12.8
+    TOYOTA_TS_FL: 11.52
+    TOYOTA_TS_FR: 12.8
+    TOYOTA_TS_RL: 11.52
+    TOYOTA_TS_RR: 12.8
 - response: 7B80661030A0A0A0A
   expected_values:
     TOYOTA_TIRE_FL_SPD: 12.8
@@ -312,6 +352,16 @@ test_cases:
     TOYOTA_TS_FR: 12.8
     TOYOTA_TS_RL: 12.8
     TOYOTA_TS_RR: 14.08
+- response: 7B80661030A0B090B
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 14.08
+    TOYOTA_TIRE_FR_SPD: 12.8
+    TOYOTA_TIRE_RL_SPD: 14.08
+    TOYOTA_TIRE_RR_SPD: 11.52
+    TOYOTA_TS_FL: 14.08
+    TOYOTA_TS_FR: 12.8
+    TOYOTA_TS_RL: 14.08
+    TOYOTA_TS_RR: 11.52
 - response: 7B80661030A0C090C
   expected_values:
     TOYOTA_TIRE_FL_SPD: 15.36
@@ -372,6 +422,26 @@ test_cases:
     TOYOTA_TS_FR: 14.08
     TOYOTA_TS_RL: 15.36
     TOYOTA_TS_RR: 12.8
+- response: 7B80661030C0A0B08
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 12.8
+    TOYOTA_TIRE_FR_SPD: 15.36
+    TOYOTA_TIRE_RL_SPD: 10.24
+    TOYOTA_TIRE_RR_SPD: 14.08
+    TOYOTA_TS_FL: 12.8
+    TOYOTA_TS_FR: 15.36
+    TOYOTA_TS_RL: 10.24
+    TOYOTA_TS_RR: 14.08
+- response: 7B80661030C0B0C0B
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 14.08
+    TOYOTA_TIRE_FR_SPD: 15.36
+    TOYOTA_TIRE_RL_SPD: 14.08
+    TOYOTA_TIRE_RR_SPD: 15.36
+    TOYOTA_TS_FL: 14.08
+    TOYOTA_TS_FR: 15.36
+    TOYOTA_TS_RL: 14.08
+    TOYOTA_TS_RR: 15.36
 - response: 7B80661030C0C0C0C
   expected_values:
     TOYOTA_TIRE_FL_SPD: 15.36
@@ -382,6 +452,16 @@ test_cases:
     TOYOTA_TS_FR: 15.36
     TOYOTA_TS_RL: 15.36
     TOYOTA_TS_RR: 15.36
+- response: 7B80661030C0C0D0D
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 15.36
+    TOYOTA_TIRE_FR_SPD: 15.36
+    TOYOTA_TIRE_RL_SPD: 16.64
+    TOYOTA_TIRE_RR_SPD: 16.64
+    TOYOTA_TS_FL: 15.36
+    TOYOTA_TS_FR: 15.36
+    TOYOTA_TS_RL: 16.64
+    TOYOTA_TS_RR: 16.64
 - response: 7B80661030C0E0B0D
   expected_values:
     TOYOTA_TIRE_FL_SPD: 17.92
@@ -392,6 +472,26 @@ test_cases:
     TOYOTA_TS_FR: 15.36
     TOYOTA_TS_RL: 16.64
     TOYOTA_TS_RR: 14.08
+- response: 7B80661030C0E0C0D
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 17.92
+    TOYOTA_TIRE_FR_SPD: 15.36
+    TOYOTA_TIRE_RL_SPD: 16.64
+    TOYOTA_TIRE_RR_SPD: 15.36
+    TOYOTA_TS_FL: 17.92
+    TOYOTA_TS_FR: 15.36
+    TOYOTA_TS_RL: 16.64
+    TOYOTA_TS_RR: 15.36
+- response: 7B80661030C0E0C0E
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 17.92
+    TOYOTA_TIRE_FR_SPD: 15.36
+    TOYOTA_TIRE_RL_SPD: 17.92
+    TOYOTA_TIRE_RR_SPD: 15.36
+    TOYOTA_TS_FL: 17.92
+    TOYOTA_TS_FR: 15.36
+    TOYOTA_TS_RL: 17.92
+    TOYOTA_TS_RR: 15.36
 - response: 7B80661030D0B0C0A
   expected_values:
     TOYOTA_TIRE_FL_SPD: 14.08
@@ -422,6 +522,16 @@ test_cases:
     TOYOTA_TS_FR: 16.64
     TOYOTA_TS_RL: 16.64
     TOYOTA_TS_RR: 16.64
+- response: 7B80661030D0E0D0E
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 17.92
+    TOYOTA_TIRE_FR_SPD: 16.64
+    TOYOTA_TIRE_RL_SPD: 17.92
+    TOYOTA_TIRE_RR_SPD: 16.64
+    TOYOTA_TS_FL: 17.92
+    TOYOTA_TS_FR: 16.64
+    TOYOTA_TS_RL: 17.92
+    TOYOTA_TS_RR: 16.64
 - response: 7B80661030D0F0D0F
   expected_values:
     TOYOTA_TIRE_FL_SPD: 19.2
@@ -432,6 +542,16 @@ test_cases:
     TOYOTA_TS_FR: 16.64
     TOYOTA_TS_RL: 19.2
     TOYOTA_TS_RR: 16.64
+- response: 7B80661030E0C0E0B
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 15.36
+    TOYOTA_TIRE_FR_SPD: 17.92
+    TOYOTA_TIRE_RL_SPD: 14.08
+    TOYOTA_TIRE_RR_SPD: 17.92
+    TOYOTA_TS_FL: 15.36
+    TOYOTA_TS_FR: 17.92
+    TOYOTA_TS_RL: 14.08
+    TOYOTA_TS_RR: 17.92
 - response: 7B80661030E0C0E0C
   expected_values:
     TOYOTA_TIRE_FL_SPD: 15.36
@@ -441,6 +561,26 @@ test_cases:
     TOYOTA_TS_FL: 15.36
     TOYOTA_TS_FR: 17.92
     TOYOTA_TS_RL: 15.36
+    TOYOTA_TS_RR: 17.92
+- response: 7B80661030E0D0E0D
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 16.64
+    TOYOTA_TIRE_FR_SPD: 17.92
+    TOYOTA_TIRE_RL_SPD: 16.64
+    TOYOTA_TIRE_RR_SPD: 17.92
+    TOYOTA_TS_FL: 16.64
+    TOYOTA_TS_FR: 17.92
+    TOYOTA_TS_RL: 16.64
+    TOYOTA_TS_RR: 17.92
+- response: 7B80661030E0D0E0E
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 16.64
+    TOYOTA_TIRE_FR_SPD: 17.92
+    TOYOTA_TIRE_RL_SPD: 17.92
+    TOYOTA_TIRE_RR_SPD: 17.92
+    TOYOTA_TS_FL: 16.64
+    TOYOTA_TS_FR: 17.92
+    TOYOTA_TS_RL: 17.92
     TOYOTA_TS_RR: 17.92
 - response: 7B80661030E0E0E0E
   expected_values:
@@ -472,6 +612,16 @@ test_cases:
     TOYOTA_TS_FR: 19.2
     TOYOTA_TS_RL: 19.2
     TOYOTA_TS_RR: 19.2
+- response: 7B80661030F0F100F
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 19.2
+    TOYOTA_TIRE_FR_SPD: 19.2
+    TOYOTA_TIRE_RL_SPD: 19.2
+    TOYOTA_TIRE_RR_SPD: 20.48
+    TOYOTA_TS_FL: 19.2
+    TOYOTA_TS_FR: 19.2
+    TOYOTA_TS_RL: 19.2
+    TOYOTA_TS_RR: 20.48
 - response: 7B80661030F101010
   expected_values:
     TOYOTA_TIRE_FL_SPD: 20.48
@@ -502,6 +652,26 @@ test_cases:
     TOYOTA_TS_FR: 20.48
     TOYOTA_TS_RL: 21.76
     TOYOTA_TS_RR: 20.48
+- response: 7B8066103110F110F
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 19.2
+    TOYOTA_TIRE_FR_SPD: 21.76
+    TOYOTA_TIRE_RL_SPD: 19.2
+    TOYOTA_TIRE_RR_SPD: 21.76
+    TOYOTA_TS_FL: 19.2
+    TOYOTA_TS_FR: 21.76
+    TOYOTA_TS_RL: 19.2
+    TOYOTA_TS_RR: 21.76
+- response: 7B806610311101110
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 20.48
+    TOYOTA_TIRE_FR_SPD: 21.76
+    TOYOTA_TIRE_RL_SPD: 20.48
+    TOYOTA_TIRE_RR_SPD: 21.76
+    TOYOTA_TS_FL: 20.48
+    TOYOTA_TS_FR: 21.76
+    TOYOTA_TS_RL: 20.48
+    TOYOTA_TS_RR: 21.76
 - response: 7B806610311111111
   expected_values:
     TOYOTA_TIRE_FL_SPD: 21.76
@@ -509,6 +679,16 @@ test_cases:
     TOYOTA_TIRE_RL_SPD: 21.76
     TOYOTA_TIRE_RR_SPD: 21.76
     TOYOTA_TS_FL: 21.76
+    TOYOTA_TS_FR: 21.76
+    TOYOTA_TS_RL: 21.76
+    TOYOTA_TS_RR: 21.76
+- response: 7B806610311121111
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 23.04
+    TOYOTA_TIRE_FR_SPD: 21.76
+    TOYOTA_TIRE_RL_SPD: 21.76
+    TOYOTA_TIRE_RR_SPD: 21.76
+    TOYOTA_TS_FL: 23.04
     TOYOTA_TS_FR: 21.76
     TOYOTA_TS_RL: 21.76
     TOYOTA_TS_RR: 21.76
@@ -552,6 +732,16 @@ test_cases:
     TOYOTA_TS_FR: 23.04
     TOYOTA_TS_RL: 23.04
     TOYOTA_TS_RR: 23.04
+- response: 7B806610313111211
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 21.76
+    TOYOTA_TIRE_FR_SPD: 24.32
+    TOYOTA_TIRE_RL_SPD: 21.76
+    TOYOTA_TIRE_RR_SPD: 23.04
+    TOYOTA_TS_FL: 21.76
+    TOYOTA_TS_FR: 24.32
+    TOYOTA_TS_RL: 21.76
+    TOYOTA_TS_RR: 23.04
 - response: 7B806610313131312
   expected_values:
     TOYOTA_TIRE_FL_SPD: 24.32
@@ -572,6 +762,16 @@ test_cases:
     TOYOTA_TS_FR: 24.32
     TOYOTA_TS_RL: 24.32
     TOYOTA_TS_RR: 24.32
+- response: 7B806610313141314
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 25.6
+    TOYOTA_TIRE_FR_SPD: 24.32
+    TOYOTA_TIRE_RL_SPD: 25.6
+    TOYOTA_TIRE_RR_SPD: 24.32
+    TOYOTA_TS_FL: 25.6
+    TOYOTA_TS_FR: 24.32
+    TOYOTA_TS_RL: 25.6
+    TOYOTA_TS_RR: 24.32
 - response: 7B806610313141413
   expected_values:
     TOYOTA_TIRE_FL_SPD: 25.6
@@ -582,6 +782,16 @@ test_cases:
     TOYOTA_TS_FR: 24.32
     TOYOTA_TS_RL: 24.32
     TOYOTA_TS_RR: 25.6
+- response: 7B806610313151315
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 26.88
+    TOYOTA_TIRE_FR_SPD: 24.32
+    TOYOTA_TIRE_RL_SPD: 26.88
+    TOYOTA_TIRE_RR_SPD: 24.32
+    TOYOTA_TS_FL: 26.88
+    TOYOTA_TS_FR: 24.32
+    TOYOTA_TS_RL: 26.88
+    TOYOTA_TS_RR: 24.32
 - response: 7B806610314121412
   expected_values:
     TOYOTA_TIRE_FL_SPD: 23.04
@@ -591,6 +801,16 @@ test_cases:
     TOYOTA_TS_FL: 23.04
     TOYOTA_TS_FR: 25.6
     TOYOTA_TS_RL: 23.04
+    TOYOTA_TS_RR: 25.6
+- response: 7B806610314131413
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 24.32
+    TOYOTA_TIRE_FR_SPD: 25.6
+    TOYOTA_TIRE_RL_SPD: 24.32
+    TOYOTA_TIRE_RR_SPD: 25.6
+    TOYOTA_TS_FL: 24.32
+    TOYOTA_TS_FR: 25.6
+    TOYOTA_TS_RL: 24.32
     TOYOTA_TS_RR: 25.6
 - response: 7B806610314131414
   expected_values:
@@ -631,6 +851,26 @@ test_cases:
     TOYOTA_TS_FL: 25.6
     TOYOTA_TS_FR: 25.6
     TOYOTA_TS_RL: 25.6
+    TOYOTA_TS_RR: 26.88
+- response: 7B806610314151415
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 26.88
+    TOYOTA_TIRE_FR_SPD: 25.6
+    TOYOTA_TIRE_RL_SPD: 26.88
+    TOYOTA_TIRE_RR_SPD: 25.6
+    TOYOTA_TS_FL: 26.88
+    TOYOTA_TS_FR: 25.6
+    TOYOTA_TS_RL: 26.88
+    TOYOTA_TS_RR: 25.6
+- response: 7B806610314151515
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 26.88
+    TOYOTA_TIRE_FR_SPD: 25.6
+    TOYOTA_TIRE_RL_SPD: 26.88
+    TOYOTA_TIRE_RR_SPD: 26.88
+    TOYOTA_TS_FL: 26.88
+    TOYOTA_TS_FR: 25.6
+    TOYOTA_TS_RL: 26.88
     TOYOTA_TS_RR: 26.88
 - response: 7B806610315131513
   expected_values:
@@ -702,6 +942,16 @@ test_cases:
     TOYOTA_TS_FR: 28.16
     TOYOTA_TS_RL: 28.16
     TOYOTA_TS_RR: 28.16
+- response: 7B806610316171616
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 29.44
+    TOYOTA_TIRE_FR_SPD: 28.16
+    TOYOTA_TIRE_RL_SPD: 28.16
+    TOYOTA_TIRE_RR_SPD: 28.16
+    TOYOTA_TS_FL: 29.44
+    TOYOTA_TS_FR: 28.16
+    TOYOTA_TS_RL: 28.16
+    TOYOTA_TS_RR: 28.16
 - response: 7B806610317171616
   expected_values:
     TOYOTA_TIRE_FL_SPD: 29.44
@@ -762,6 +1012,16 @@ test_cases:
     TOYOTA_TS_FR: 30.72
     TOYOTA_TS_RL: 30.72
     TOYOTA_TS_RR: 32
+- response: 7B806610319171817
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 29.44
+    TOYOTA_TIRE_FR_SPD: 32
+    TOYOTA_TIRE_RL_SPD: 29.44
+    TOYOTA_TIRE_RR_SPD: 30.72
+    TOYOTA_TS_FL: 29.44
+    TOYOTA_TS_FR: 32
+    TOYOTA_TS_RL: 29.44
+    TOYOTA_TS_RR: 30.72
 - response: 7B806610319191918
   expected_values:
     TOYOTA_TIRE_FL_SPD: 32
@@ -852,6 +1112,16 @@ test_cases:
     TOYOTA_TS_FR: 34.56
     TOYOTA_TS_RL: 34.56
     TOYOTA_TS_RR: 34.56
+- response: 7B80661031C1B1C1B
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 34.56
+    TOYOTA_TIRE_FR_SPD: 35.84
+    TOYOTA_TIRE_RL_SPD: 34.56
+    TOYOTA_TIRE_RR_SPD: 35.84
+    TOYOTA_TS_FL: 34.56
+    TOYOTA_TS_FR: 35.84
+    TOYOTA_TS_RL: 34.56
+    TOYOTA_TS_RR: 35.84
 - response: 7B80661031C1C1C1C
   expected_values:
     TOYOTA_TIRE_FL_SPD: 35.84
@@ -902,6 +1172,16 @@ test_cases:
     TOYOTA_TS_FR: 37.12
     TOYOTA_TS_RL: 37.12
     TOYOTA_TS_RR: 37.12
+- response: 7B80661031D1E1D1E
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 38.4
+    TOYOTA_TIRE_FR_SPD: 37.12
+    TOYOTA_TIRE_RL_SPD: 38.4
+    TOYOTA_TIRE_RR_SPD: 37.12
+    TOYOTA_TS_FL: 38.4
+    TOYOTA_TS_FR: 37.12
+    TOYOTA_TS_RL: 38.4
+    TOYOTA_TS_RR: 37.12
 - response: 7B80661031E1E1E1E
   expected_values:
     TOYOTA_TIRE_FL_SPD: 38.4
@@ -912,6 +1192,16 @@ test_cases:
     TOYOTA_TS_FR: 38.4
     TOYOTA_TS_RL: 38.4
     TOYOTA_TS_RR: 38.4
+- response: 7B80661031F1E1F1E
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 38.4
+    TOYOTA_TIRE_FR_SPD: 39.68
+    TOYOTA_TIRE_RL_SPD: 38.4
+    TOYOTA_TIRE_RR_SPD: 39.68
+    TOYOTA_TS_FL: 38.4
+    TOYOTA_TS_FR: 39.68
+    TOYOTA_TS_RL: 38.4
+    TOYOTA_TS_RR: 39.68
 - response: 7B80661031F1E1F1F
   expected_values:
     TOYOTA_TIRE_FL_SPD: 38.4
@@ -919,6 +1209,16 @@ test_cases:
     TOYOTA_TIRE_RL_SPD: 39.68
     TOYOTA_TIRE_RR_SPD: 39.68
     TOYOTA_TS_FL: 38.4
+    TOYOTA_TS_FR: 39.68
+    TOYOTA_TS_RL: 39.68
+    TOYOTA_TS_RR: 39.68
+- response: 7B80661031F1F1F1F
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 39.68
+    TOYOTA_TIRE_FR_SPD: 39.68
+    TOYOTA_TIRE_RL_SPD: 39.68
+    TOYOTA_TIRE_RR_SPD: 39.68
+    TOYOTA_TS_FL: 39.68
     TOYOTA_TS_FR: 39.68
     TOYOTA_TS_RL: 39.68
     TOYOTA_TS_RR: 39.68
@@ -1032,6 +1332,26 @@ test_cases:
     TOYOTA_TS_FR: 47.36
     TOYOTA_TS_RL: 47.36
     TOYOTA_TS_RR: 47.36
+- response: 7B806610325252625
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 47.36
+    TOYOTA_TIRE_FR_SPD: 47.36
+    TOYOTA_TIRE_RL_SPD: 47.36
+    TOYOTA_TIRE_RR_SPD: 48.64
+    TOYOTA_TS_FL: 47.36
+    TOYOTA_TS_FR: 47.36
+    TOYOTA_TS_RL: 47.36
+    TOYOTA_TS_RR: 48.64
+- response: 7B806610326252625
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 47.36
+    TOYOTA_TIRE_FR_SPD: 48.64
+    TOYOTA_TIRE_RL_SPD: 47.36
+    TOYOTA_TIRE_RR_SPD: 48.64
+    TOYOTA_TS_FL: 47.36
+    TOYOTA_TS_FR: 48.64
+    TOYOTA_TS_RL: 47.36
+    TOYOTA_TS_RR: 48.64
 - response: 7B806610326262626
   expected_values:
     TOYOTA_TIRE_FL_SPD: 48.64
@@ -1232,6 +1552,16 @@ test_cases:
     TOYOTA_TS_FR: 56.32
     TOYOTA_TS_RL: 56.32
     TOYOTA_TS_RR: 57.6
+- response: 7B80661032C2D2D2D
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 57.6
+    TOYOTA_TIRE_FR_SPD: 56.32
+    TOYOTA_TIRE_RL_SPD: 57.6
+    TOYOTA_TIRE_RR_SPD: 57.6
+    TOYOTA_TS_FL: 57.6
+    TOYOTA_TS_FR: 56.32
+    TOYOTA_TS_RL: 57.6
+    TOYOTA_TS_RR: 57.6
 - response: 7B80661032D2D2C2C
   expected_values:
     TOYOTA_TIRE_FL_SPD: 57.6
@@ -1252,6 +1582,16 @@ test_cases:
     TOYOTA_TS_FR: 57.6
     TOYOTA_TS_RL: 57.6
     TOYOTA_TS_RR: 57.6
+- response: 7B80661032D2E2D2D
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 58.88
+    TOYOTA_TIRE_FR_SPD: 57.6
+    TOYOTA_TIRE_RL_SPD: 57.6
+    TOYOTA_TIRE_RR_SPD: 57.6
+    TOYOTA_TS_FL: 58.88
+    TOYOTA_TS_FR: 57.6
+    TOYOTA_TS_RL: 57.6
+    TOYOTA_TS_RR: 57.6
 - response: 7B80661032D2E2E2E
   expected_values:
     TOYOTA_TIRE_FL_SPD: 58.88
@@ -1262,6 +1602,16 @@ test_cases:
     TOYOTA_TS_FR: 57.6
     TOYOTA_TS_RL: 58.88
     TOYOTA_TS_RR: 58.88
+- response: 7B80661032E2D2D2D
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 57.6
+    TOYOTA_TIRE_FR_SPD: 58.88
+    TOYOTA_TIRE_RL_SPD: 57.6
+    TOYOTA_TIRE_RR_SPD: 57.6
+    TOYOTA_TS_FL: 57.6
+    TOYOTA_TS_FR: 58.88
+    TOYOTA_TS_RL: 57.6
+    TOYOTA_TS_RR: 57.6
 - response: 7B80661032E2D2E2D
   expected_values:
     TOYOTA_TIRE_FL_SPD: 57.6
@@ -1342,6 +1692,16 @@ test_cases:
     TOYOTA_TS_FR: 60.16
     TOYOTA_TS_RL: 60.16
     TOYOTA_TS_RR: 60.16
+- response: 7B80661033030302F
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 61.44
+    TOYOTA_TIRE_FR_SPD: 61.44
+    TOYOTA_TIRE_RL_SPD: 60.16
+    TOYOTA_TIRE_RR_SPD: 61.44
+    TOYOTA_TS_FL: 61.44
+    TOYOTA_TS_FR: 61.44
+    TOYOTA_TS_RL: 60.16
+    TOYOTA_TS_RR: 61.44
 - response: 7B806610330303030
   expected_values:
     TOYOTA_TIRE_FL_SPD: 61.44
@@ -1370,6 +1730,16 @@ test_cases:
     TOYOTA_TIRE_RR_SPD: 62.72
     TOYOTA_TS_FL: 62.72
     TOYOTA_TS_FR: 62.72
+    TOYOTA_TS_RL: 62.72
+    TOYOTA_TS_RR: 62.72
+- response: 7B806610332323131
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 64
+    TOYOTA_TIRE_FR_SPD: 64
+    TOYOTA_TIRE_RL_SPD: 62.72
+    TOYOTA_TIRE_RR_SPD: 62.72
+    TOYOTA_TS_FL: 64
+    TOYOTA_TS_FR: 64
     TOYOTA_TS_RL: 62.72
     TOYOTA_TS_RR: 62.72
 - response: 7B806610332323232
@@ -1512,6 +1882,16 @@ test_cases:
     TOYOTA_TS_FR: 69.12
     TOYOTA_TS_RL: 69.12
     TOYOTA_TS_RR: 69.12
+- response: 7B806610336373737
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 70.4
+    TOYOTA_TIRE_FR_SPD: 69.12
+    TOYOTA_TIRE_RL_SPD: 70.4
+    TOYOTA_TIRE_RR_SPD: 70.4
+    TOYOTA_TS_FL: 70.4
+    TOYOTA_TS_FR: 69.12
+    TOYOTA_TS_RL: 70.4
+    TOYOTA_TS_RR: 70.4
 - response: 7B806610337373737
   expected_values:
     TOYOTA_TIRE_FL_SPD: 70.4
@@ -1539,6 +1919,16 @@ test_cases:
     TOYOTA_TIRE_RL_SPD: 71.68
     TOYOTA_TIRE_RR_SPD: 71.68
     TOYOTA_TS_FL: 71.68
+    TOYOTA_TS_FR: 71.68
+    TOYOTA_TS_RL: 71.68
+    TOYOTA_TS_RR: 71.68
+- response: 7B806610338393838
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 72.96
+    TOYOTA_TIRE_FR_SPD: 71.68
+    TOYOTA_TIRE_RL_SPD: 71.68
+    TOYOTA_TIRE_RR_SPD: 71.68
+    TOYOTA_TS_FL: 72.96
     TOYOTA_TS_FR: 71.68
     TOYOTA_TS_RL: 71.68
     TOYOTA_TS_RR: 71.68
@@ -1632,6 +2022,16 @@ test_cases:
     TOYOTA_TS_FR: 75.52
     TOYOTA_TS_RL: 75.52
     TOYOTA_TS_RR: 75.52
+- response: 7B80661033B3B3C3B
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 75.52
+    TOYOTA_TIRE_FR_SPD: 75.52
+    TOYOTA_TIRE_RL_SPD: 75.52
+    TOYOTA_TIRE_RR_SPD: 76.8
+    TOYOTA_TS_FL: 75.52
+    TOYOTA_TS_FR: 75.52
+    TOYOTA_TS_RL: 75.52
+    TOYOTA_TS_RR: 76.8
 - response: 7B80661033B3C3B3B
   expected_values:
     TOYOTA_TIRE_FL_SPD: 76.8
@@ -1640,6 +2040,16 @@ test_cases:
     TOYOTA_TIRE_RR_SPD: 75.52
     TOYOTA_TS_FL: 76.8
     TOYOTA_TS_FR: 75.52
+    TOYOTA_TS_RL: 75.52
+    TOYOTA_TS_RR: 75.52
+- response: 7B80661033C3C3B3B
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 76.8
+    TOYOTA_TIRE_FR_SPD: 76.8
+    TOYOTA_TIRE_RL_SPD: 75.52
+    TOYOTA_TIRE_RR_SPD: 75.52
+    TOYOTA_TS_FL: 76.8
+    TOYOTA_TS_FR: 76.8
     TOYOTA_TS_RL: 75.52
     TOYOTA_TS_RR: 75.52
 - response: 7B80661033C3C3C3C
@@ -1672,6 +2082,16 @@ test_cases:
     TOYOTA_TS_FR: 78.08
     TOYOTA_TS_RL: 79.36
     TOYOTA_TS_RR: 78.08
+- response: 7B80661033D3E3E3E
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 79.36
+    TOYOTA_TIRE_FR_SPD: 78.08
+    TOYOTA_TIRE_RL_SPD: 79.36
+    TOYOTA_TIRE_RR_SPD: 79.36
+    TOYOTA_TS_FL: 79.36
+    TOYOTA_TS_FR: 78.08
+    TOYOTA_TS_RL: 79.36
+    TOYOTA_TS_RR: 79.36
 - response: 7B80661033E3D3E3E
   expected_values:
     TOYOTA_TIRE_FL_SPD: 78.08
