--- a/tests/test_cases/2021/commands/7B0.7B8.2103.yaml
+++ b/tests/test_cases/2021/commands/7B0.7B8.2103.yaml
@@ -32,6 +32,56 @@ test_cases:
     TOYOTA_TS_FR: 3.84
     TOYOTA_TS_RL: 3.84
     TOYOTA_TS_RR: 3.84
+- response: 7B806610304050405
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 6.4
+    TOYOTA_TIRE_FR_SPD: 5.12
+    TOYOTA_TIRE_RL_SPD: 6.4
+    TOYOTA_TIRE_RR_SPD: 5.12
+    TOYOTA_TS_FL: 6.4
+    TOYOTA_TS_FR: 5.12
+    TOYOTA_TS_RL: 6.4
+    TOYOTA_TS_RR: 5.12
+- response: 7B806610308070807
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 8.96
+    TOYOTA_TIRE_FR_SPD: 10.24
+    TOYOTA_TIRE_RL_SPD: 8.96
+    TOYOTA_TIRE_RR_SPD: 10.24
+    TOYOTA_TS_FL: 8.96
+    TOYOTA_TS_FR: 10.24
+    TOYOTA_TS_RL: 8.96
+    TOYOTA_TS_RR: 10.24
+- response: 7B806610309080908
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 10.24
+    TOYOTA_TIRE_FR_SPD: 11.52
+    TOYOTA_TIRE_RL_SPD: 10.24
+    TOYOTA_TIRE_RR_SPD: 11.52
+    TOYOTA_TS_FL: 10.24
+    TOYOTA_TS_FR: 11.52
+    TOYOTA_TS_RL: 10.24
+    TOYOTA_TS_RR: 11.52
+- response: 7B8066103090A090A
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 12.8
+    TOYOTA_TIRE_FR_SPD: 11.52
+    TOYOTA_TIRE_RL_SPD: 12.8
+    TOYOTA_TIRE_RR_SPD: 11.52
+    TOYOTA_TS_FL: 12.8
+    TOYOTA_TS_FR: 11.52
+    TOYOTA_TS_RL: 12.8
+    TOYOTA_TS_RR: 11.52
+- response: 7B80661030A090A09
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 11.52
+    TOYOTA_TIRE_FR_SPD: 12.8
+    TOYOTA_TIRE_RL_SPD: 11.52
+    TOYOTA_TIRE_RR_SPD: 12.8
+    TOYOTA_TS_FL: 11.52
+    TOYOTA_TS_FR: 12.8
+    TOYOTA_TS_RL: 11.52
+    TOYOTA_TS_RR: 12.8
 - response: 7B80661030B0B0B0B
   expected_values:
     TOYOTA_TIRE_FL_SPD: 14.08
@@ -71,6 +121,16 @@ test_cases:
     TOYOTA_TS_FL: 21.76
     TOYOTA_TS_FR: 21.76
     TOYOTA_TS_RL: 21.76
+    TOYOTA_TS_RR: 21.76
+- response: 7B806610311121112
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 23.04
+    TOYOTA_TIRE_FR_SPD: 21.76
+    TOYOTA_TIRE_RL_SPD: 23.04
+    TOYOTA_TIRE_RR_SPD: 21.76
+    TOYOTA_TS_FL: 23.04
+    TOYOTA_TS_FR: 21.76
+    TOYOTA_TS_RL: 23.04
     TOYOTA_TS_RR: 21.76
 - response: 7B806610312121312
   expected_values:
@@ -152,6 +212,36 @@ test_cases:
     TOYOTA_TS_FR: 34.56
     TOYOTA_TS_RL: 35.84
     TOYOTA_TS_RR: 35.84
+- response: 7B80661031C1B1C1C
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 34.56
+    TOYOTA_TIRE_FR_SPD: 35.84
+    TOYOTA_TIRE_RL_SPD: 35.84
+    TOYOTA_TIRE_RR_SPD: 35.84
+    TOYOTA_TS_FL: 34.56
+    TOYOTA_TS_FR: 35.84
+    TOYOTA_TS_RL: 35.84
+    TOYOTA_TS_RR: 35.84
+- response: 7B80661031D1C1D1C
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 35.84
+    TOYOTA_TIRE_FR_SPD: 37.12
+    TOYOTA_TIRE_RL_SPD: 35.84
+    TOYOTA_TIRE_RR_SPD: 37.12
+    TOYOTA_TS_FL: 35.84
+    TOYOTA_TS_FR: 37.12
+    TOYOTA_TS_RL: 35.84
+    TOYOTA_TS_RR: 37.12
+- response: 7B80661031D1D1D1E
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 37.12
+    TOYOTA_TIRE_FR_SPD: 37.12
+    TOYOTA_TIRE_RL_SPD: 38.4
+    TOYOTA_TIRE_RR_SPD: 37.12
+    TOYOTA_TS_FL: 37.12
+    TOYOTA_TS_FR: 37.12
+    TOYOTA_TS_RL: 38.4
+    TOYOTA_TS_RR: 37.12
 - response: 7B80661031E1E1E1E
   expected_values:
     TOYOTA_TIRE_FL_SPD: 38.4
@@ -162,6 +252,16 @@ test_cases:
     TOYOTA_TS_FR: 38.4
     TOYOTA_TS_RL: 38.4
     TOYOTA_TS_RR: 38.4
+- response: 7B80661031E1E1F1F
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 38.4
+    TOYOTA_TIRE_FR_SPD: 38.4
+    TOYOTA_TIRE_RL_SPD: 39.68
+    TOYOTA_TIRE_RR_SPD: 39.68
+    TOYOTA_TS_FL: 38.4
+    TOYOTA_TS_FR: 38.4
+    TOYOTA_TS_RL: 39.68
+    TOYOTA_TS_RR: 39.68
 - response: 7B80661031F1F1F1F
   expected_values:
     TOYOTA_TIRE_FL_SPD: 39.68
@@ -242,6 +342,16 @@ test_cases:
     TOYOTA_TS_FR: 47.36
     TOYOTA_TS_RL: 47.36
     TOYOTA_TS_RR: 47.36
+- response: 7B806610325252625
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 47.36
+    TOYOTA_TIRE_FR_SPD: 47.36
+    TOYOTA_TIRE_RL_SPD: 47.36
+    TOYOTA_TIRE_RR_SPD: 48.64
+    TOYOTA_TS_FL: 47.36
+    TOYOTA_TS_FR: 47.36
+    TOYOTA_TS_RL: 47.36
+    TOYOTA_TS_RR: 48.64
 - response: 7B806610326252626
   expected_values:
     TOYOTA_TIRE_FL_SPD: 47.36
@@ -252,6 +362,16 @@ test_cases:
     TOYOTA_TS_FR: 48.64
     TOYOTA_TS_RL: 48.64
     TOYOTA_TS_RR: 48.64
+- response: 7B806610326262727
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 48.64
+    TOYOTA_TIRE_FR_SPD: 48.64
+    TOYOTA_TIRE_RL_SPD: 49.92
+    TOYOTA_TIRE_RR_SPD: 49.92
+    TOYOTA_TS_FL: 48.64
+    TOYOTA_TS_FR: 48.64
+    TOYOTA_TS_RL: 49.92
+    TOYOTA_TS_RR: 49.92
 - response: 7B806610327272828
   expected_values:
     TOYOTA_TIRE_FL_SPD: 49.92
@@ -352,6 +472,16 @@ test_cases:
     TOYOTA_TS_FR: 57.6
     TOYOTA_TS_RL: 58.88
     TOYOTA_TS_RR: 57.6
+- response: 7B80661032D2E2E2E
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 58.88
+    TOYOTA_TIRE_FR_SPD: 57.6
+    TOYOTA_TIRE_RL_SPD: 58.88
+    TOYOTA_TIRE_RR_SPD: 58.88
+    TOYOTA_TS_FL: 58.88
+    TOYOTA_TS_FR: 57.6
+    TOYOTA_TS_RL: 58.88
+    TOYOTA_TS_RR: 58.88
 - response: 7B80661032F2F2F2F
   expected_values:
     TOYOTA_TIRE_FL_SPD: 60.16
@@ -362,6 +492,26 @@ test_cases:
     TOYOTA_TS_FR: 60.16
     TOYOTA_TS_RL: 60.16
     TOYOTA_TS_RR: 60.16
+- response: 7B80661032F2F3030
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 60.16
+    TOYOTA_TIRE_FR_SPD: 60.16
+    TOYOTA_TIRE_RL_SPD: 61.44
+    TOYOTA_TIRE_RR_SPD: 61.44
+    TOYOTA_TS_FL: 60.16
+    TOYOTA_TS_FR: 60.16
+    TOYOTA_TS_RL: 61.44
+    TOYOTA_TS_RR: 61.44
+- response: 7B806610331313131
+  expected_values:
+    TOYOTA_TIRE_FL_SPD: 62.72
+    TOYOTA_TIRE_FR_SPD: 62.72
+    TOYOTA_TIRE_RL_SPD: 62.72
+    TOYOTA_TIRE_RR_SPD: 62.72
+    TOYOTA_TS_FL: 62.72
+    TOYOTA_TS_FR: 62.72
+    TOYOTA_TS_RL: 62.72
+    TOYOTA_TS_RR: 62.72
 - response: 7B806610333323333
   expected_values:
     TOYOTA_TIRE_FL_SPD: 64
