--- a/tests/test_cases/2021/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2151.yaml
@@ -113,6 +113,50 @@ test_cases:
     TOYOTA_PREV_TRIP_DST: 1.91
     TOYOTA_VVTOT: 128
 - response: |-
+    7E8102361510000030A
+    7E82101000D573C4243
+    7E8223937043224D903
+    7E8233A000080528F49
+    7E82480208000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 66
+    TOYOTA_PREV_TRIP_DST: 0.13
+    TOYOTA_VVTOT: 87
+- response: |-
+    7E8102361510000030A
+    7E82101002D573C4743
+    7E822393700001E8402
+    7E823CD000080528F49
+    7E82480128000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 71
+    TOYOTA_PREV_TRIP_DST: 0.45
+    TOYOTA_VVTOT: 87
+- response: |-
+    7E8102361510000030A
+    7E82101005C573C4A43
+    7E8223937030A1BA302
+    7E82392000080528F49
+    7E82480048000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 74
+    TOYOTA_PREV_TRIP_DST: 0.92
+    TOYOTA_VVTOT: 87
+- response: |-
+    7E8102361510000030A
+    7E821010080623D4D4D
+    7E822383800001C0302
+    7E8239A000080528F49
+    7E824800D8310800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 77
+    TOYOTA_PREV_TRIP_DST: 1.28
+    TOYOTA_VVTOT: 98
+- response: |-
     7E81023615100000317
     7E821010000723D5F60
     7E822373700001C3602
@@ -201,6 +245,61 @@ test_cases:
     TOYOTA_PREV_TRIP_DST: 1.78
     TOYOTA_VVTOT: 127
 - response: |-
+    7E81023615100000341
+    7E82101000B80423564
+    7E822373D0000257503
+    7E82345000080528F49
+    7E82480098000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 53
+    TOYOTA_PREV_TRIP_DST: 0.11
+    TOYOTA_VVTOT: 128
+- response: |-
+    7E81023615100000341
+    7E82101002B80423964
+    7E822373D002A23A603
+    7E82326000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 57
+    TOYOTA_PREV_TRIP_DST: 0.43
+    TOYOTA_VVTOT: 128
+- response: |-
+    7E81023615100000341
+    7E82101005A80423D64
+    7E822373D0303211302
+    7E823F9000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 61
+    TOYOTA_PREV_TRIP_DST: 0.9
+    TOYOTA_VVTOT: 128
+- response: |-
+    7E81023615100000341
+    7E82101007B533C4141
+    7E822373700001F9702
+    7E823E0000080528F49
+    7E82480048000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 65
+    TOYOTA_PREV_TRIP_DST: 1.23
+    TOYOTA_VVTOT: 83
+- response: |-
+    7E81023615100000341
+    7E821010086563C4242
+    7E822373700021EC402
+    7E823D2000080528F49
+    7E82480008000801F00
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 66
+    TOYOTA_PREV_TRIP_DST: 1.34
+    TOYOTA_VVTOT: 86
+- response: |-
     7E81023615100000357
     7E82101000C7F42556E
     7E8223A3700011B7502
@@ -267,6 +366,127 @@ test_cases:
     TOYOTA_PREV_TRIP_DST: 1.8
     TOYOTA_VVTOT: 114
 - response: |-
+    7E8102361510000036E
+    7E82101001571345356
+    7E8223030000C18F902
+    7E8234C000080528F49
+    7E82480008000821900
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 83
+    TOYOTA_PREV_TRIP_DST: 0.21
+    TOYOTA_VVTOT: 113
+- response: |-
+    7E81023615100000373
+    7E821010016643D324E
+    7E8222F3800002D7603
+    7E823C7000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 50
+    TOYOTA_PREV_TRIP_DST: 0.22
+    TOYOTA_VVTOT: 100
+- response: |-
+    7E81023615100000373
+    7E821010038643D364E
+    7E8222F3802CC2B6D03
+    7E823A8000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 54
+    TOYOTA_PREV_TRIP_DST: 0.56
+    TOYOTA_VVTOT: 100
+- response: |-
+    7E81023615100000373
+    7E821010068643D3B4E
+    7E8222F3800CC222703
+    7E8230C000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 59
+    TOYOTA_PREV_TRIP_DST: 1.04
+    TOYOTA_VVTOT: 100
+- response: |-
+    7E81023615100000373
+    7E8210100914F353D3D
+    7E8222F2F000020BE02
+    7E823F4000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 61
+    TOYOTA_PREV_TRIP_DST: 1.45
+    TOYOTA_VVTOT: 79
+- response: |-
+    7E81023615100000373
+    7E8210100B652353F3F
+    7E8222F2F043D1FCA02
+    7E823E3000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 63
+    TOYOTA_PREV_TRIP_DST: 1.82
+    TOYOTA_VVTOT: 82
+- response: |-
+    7E81023615100000373
+    7E8210100D255354141
+    7E8222F2F01171EEE02
+    7E823D5000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 65
+    TOYOTA_PREV_TRIP_DST: 2.1
+    TOYOTA_VVTOT: 85
+- response: |-
+    7E81023615100000373
+    7E8210100EC5A354343
+    7E8222F2F00001DDF02
+    7E823C0000080528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 67
+    TOYOTA_PREV_TRIP_DST: 2.36
+    TOYOTA_VVTOT: 90
+- response: |-
+    7E81023615100000373
+    7E8210100F95C354545
+    7E8222F2F00001DB102
+    7E823BC000080528F49
+    7E82480008000814C00
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 69
+    TOYOTA_PREV_TRIP_DST: 2.49
+    TOYOTA_VVTOT: 92
+- response: |-
+    7E81023615100000373
+    7E8210100FB5E354747
+    7E8222F2F01481E4802
+    7E823C8002380528F49
+    7E82480008310800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 71
+    TOYOTA_PREV_TRIP_DST: 2.51
+    TOYOTA_VVTOT: 94
+- response: |-
+    7E81023615100000373
+    7E82101010661354949
+    7E8222F2F02D7190402
+    7E8235D002380528F49
+    7E82480008000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 73
+    TOYOTA_PREV_TRIP_DST: 2.62
+    TOYOTA_VVTOT: 97
+- response: |-
     7E81023615100000386
     7E8210100006F355055
     7E822323200001DFB02
@@ -277,6 +497,116 @@ test_cases:
     TOYOTA_EOT: 80
     TOYOTA_PREV_TRIP_DST: 0
     TOYOTA_VVTOT: 111
+- response: |-
+    7E81023615100000386
+    7E82101000783443D7D
+    7E822413C00002F5703
+    7E823E3008B80528F49
+    7E824804E8310800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 61
+    TOYOTA_PREV_TRIP_DST: 0.07
+    TOYOTA_VVTOT: 131
+- response: |-
+    7E81023615100000386
+    7E8210100088344407D
+    7E822413C06E7275603
+    7E82365005680528F49
+    7E824804E8310800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 64
+    TOYOTA_PREV_TRIP_DST: 0.08
+    TOYOTA_VVTOT: 131
+- response: |-
+    7E81023615100000386
+    7E8210100218344437D
+    7E8223F3C08E623A303
+    7E82326005680528F49
+    7E824805B8310800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 67
+    TOYOTA_PREV_TRIP_DST: 0.33
+    TOYOTA_VVTOT: 131
+- response: |-
+    7E81023615100000386
+    7E8210100525B414747
+    7E8223F3F0329204002
+    7E823EB005680528F49
+    7E824804E8310800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 71
+    TOYOTA_PREV_TRIP_DST: 0.82
+    TOYOTA_VVTOT: 91
+- response: |-
+    7E81023615100000386
+    7E82101008260414B4B
+    7E8223E3E03511D7002
+    7E823B7005680528F49
+    7E824803B8310800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 75
+    TOYOTA_PREV_TRIP_DST: 1.3
+    TOYOTA_VVTOT: 96
+- response: |-
+    7E81023615100000386
+    7E8210100B163414D4D
+    7E8223D3D0001185002
+    7E8234F005680528F49
+    7E82480378000800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 77
+    TOYOTA_PREV_TRIP_DST: 1.77
+    TOYOTA_VVTOT: 99
+- response: |-
+    7E81023615100000386
+    7E8210100CE66405050
+    7E8223D3D06AE1B6402
+    7E8238E005680528F49
+    7E824803B8309800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 80
+    TOYOTA_PREV_TRIP_DST: 2.06
+    TOYOTA_VVTOT: 102
+- response: |-
+    7E81023615100000386
+    7E8210100E06A405151
+    7E8223D3D00001AF802
+    7E82385005680368F49
+    7E824801682FF800000
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 81
+    TOYOTA_PREV_TRIP_DST: 2.24
+    TOYOTA_VVTOT: 106
+- response: |-
+    7E81023615100000386
+    7E8210100E06C415353
+    7E8223D3D0004172E02
+    7E82338001A7F708F49
+    7E824800082FC800080
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 83
+    TOYOTA_PREV_TRIP_DST: 2.24
+    TOYOTA_VVTOT: 108
+- response: |-
+    7E81023615100000386
+    7E8210100E06C425555
+    7E8223D3D0000163702
+    7E82324003A7F058F49
+    7E824800082F9800080
+    7E82500000000000000
+  expected_values:
+    TOYOTA_EOT: 85
+    TOYOTA_PREV_TRIP_DST: 2.24
+    TOYOTA_VVTOT: 108
 - response: |-
     7E81023615100000394
     7E82101001D6E353856
