--- a/tests/test_cases/2024/commands/700.221F2F.yaml
+++ b/tests/test_cases/2024/commands/700.221F2F.yaml
@@ -5,9 +5,27 @@ test_cases:
 - response: 70804621F2F10
   expected_values:
     TOYOTA_FLI: 6.27451
+- response: 70804621F2F11
+  expected_values:
+    TOYOTA_FLI: 6.66667
+- response: 70804621F2F12
+  expected_values:
+    TOYOTA_FLI: 7.05882
+- response: 70804621F2F13
+  expected_values:
+    TOYOTA_FLI: 7.45098
 - response: 70804621F2F15
   expected_values:
     TOYOTA_FLI: 8.23529
+- response: 70804621F2F1E
+  expected_values:
+    TOYOTA_FLI: 11.76471
+- response: 70804621F2F2D
+  expected_values:
+    TOYOTA_FLI: 17.64706
+- response: 70804621F2F2F
+  expected_values:
+    TOYOTA_FLI: 18.43137
 - response: 70804621F2F3A
   expected_values:
     TOYOTA_FLI: 22.7451
@@ -17,15 +35,27 @@ test_cases:
 - response: 70804621F2F41
   expected_values:
     TOYOTA_FLI: 25.4902
+- response: 70804621F2F46
+  expected_values:
+    TOYOTA_FLI: 27.45098
 - response: 70804621F2F48
   expected_values:
     TOYOTA_FLI: 28.23529
+- response: 70804621F2F51
+  expected_values:
+    TOYOTA_FLI: 31.76471
 - response: 70804621F2F54
   expected_values:
     TOYOTA_FLI: 32.94118
 - response: 70804621F2F5B
   expected_values:
     TOYOTA_FLI: 35.68627
+- response: 70804621F2F64
+  expected_values:
+    TOYOTA_FLI: 39.21569
+- response: 70804621F2F65
+  expected_values:
+    TOYOTA_FLI: 39.60784
 - response: 70804621F2F67
   expected_values:
     TOYOTA_FLI: 40.39216
@@ -35,12 +65,51 @@ test_cases:
 - response: 70804621F2F6C
   expected_values:
     TOYOTA_FLI: 42.35294
+- response: 70804621F2F70
+  expected_values:
+    TOYOTA_FLI: 43.92157
+- response: 70804621F2F73
+  expected_values:
+    TOYOTA_FLI: 45.09804
+- response: 70804621F2F75
+  expected_values:
+    TOYOTA_FLI: 45.88235
+- response: 70804621F2F76
+  expected_values:
+    TOYOTA_FLI: 46.27451
+- response: 70804621F2F77
+  expected_values:
+    TOYOTA_FLI: 46.66667
+- response: 70804621F2F79
+  expected_values:
+    TOYOTA_FLI: 47.45098
+- response: 70804621F2F7A
+  expected_values:
+    TOYOTA_FLI: 47.84314
+- response: 70804621F2F7C
+  expected_values:
+    TOYOTA_FLI: 48.62745
+- response: 70804621F2F7D
+  expected_values:
+    TOYOTA_FLI: 49.01961
 - response: 70804621F2F7E
   expected_values:
     TOYOTA_FLI: 49.41176
+- response: 70804621F2F7F
+  expected_values:
+    TOYOTA_FLI: 49.80392
+- response: 70804621F2F80
+  expected_values:
+    TOYOTA_FLI: 50.19608
 - response: 70804621F2F81
   expected_values:
     TOYOTA_FLI: 50.58824
+- response: 70804621F2F84
+  expected_values:
+    TOYOTA_FLI: 51.76471
+- response: 70804621F2F87
+  expected_values:
+    TOYOTA_FLI: 52.94118
 - response: 70804621F2F88
   expected_values:
     TOYOTA_FLI: 53.33333
@@ -50,9 +119,18 @@ test_cases:
 - response: 70804621F2F8B
   expected_values:
     TOYOTA_FLI: 54.5098
+- response: 70804621F2F8C
+  expected_values:
+    TOYOTA_FLI: 54.90196
+- response: 70804621F2F8E
+  expected_values:
+    TOYOTA_FLI: 55.68627
 - response: 70804621F2F8F
   expected_values:
     TOYOTA_FLI: 56.07843
+- response: 70804621F2F90
+  expected_values:
+    TOYOTA_FLI: 56.47059
 - response: 70804621F2F91
   expected_values:
     TOYOTA_FLI: 56.86275
@@ -62,6 +140,9 @@ test_cases:
 - response: 70804621F2F95
   expected_values:
     TOYOTA_FLI: 58.43137
+- response: 70804621F2F96
+  expected_values:
+    TOYOTA_FLI: 58.82353
 - response: 70804621F2F97
   expected_values:
     TOYOTA_FLI: 59.21569
@@ -71,6 +152,9 @@ test_cases:
 - response: 70804621F2F99
   expected_values:
     TOYOTA_FLI: 60
+- response: 70804621F2F9A
+  expected_values:
+    TOYOTA_FLI: 60.39216
 - response: 70804621F2F9B
   expected_values:
     TOYOTA_FLI: 60.78431
@@ -89,21 +173,33 @@ test_cases:
 - response: 70804621F2FA0
   expected_values:
     TOYOTA_FLI: 62.7451
+- response: 70804621F2FA2
+  expected_values:
+    TOYOTA_FLI: 63.52941
 - response: 70804621F2FA3
   expected_values:
     TOYOTA_FLI: 63.92157
+- response: 70804621F2FA6
+  expected_values:
+    TOYOTA_FLI: 65.09804
 - response: 70804621F2FA8
   expected_values:
     TOYOTA_FLI: 65.88235
 - response: 70804621F2FA9
   expected_values:
     TOYOTA_FLI: 66.27451
+- response: 70804621F2FAA
+  expected_values:
+    TOYOTA_FLI: 66.66667
 - response: 70804621F2FAB
   expected_values:
     TOYOTA_FLI: 67.05882
 - response: 70804621F2FB0
   expected_values:
     TOYOTA_FLI: 69.01961
+- response: 70804621F2FBB
+  expected_values:
+    TOYOTA_FLI: 73.33333
 - response: 70804621F2FC0
   expected_values:
     TOYOTA_FLI: 75.29412
@@ -113,9 +209,18 @@ test_cases:
 - response: 70804621F2FC5
   expected_values:
     TOYOTA_FLI: 77.2549
+- response: 70804621F2FC9
+  expected_values:
+    TOYOTA_FLI: 78.82353
+- response: 70804621F2FCC
+  expected_values:
+    TOYOTA_FLI: 80
 - response: 70804621F2FCE
   expected_values:
     TOYOTA_FLI: 80.78431
+- response: 70804621F2FD2
+  expected_values:
+    TOYOTA_FLI: 82.35294
 - response: 70804621F2FD9
   expected_values:
     TOYOTA_FLI: 85.09804
@@ -125,6 +230,15 @@ test_cases:
 - response: 70804621F2FDD
   expected_values:
     TOYOTA_FLI: 86.66667
+- response: 70804621F2FEA
+  expected_values:
+    TOYOTA_FLI: 91.76471
+- response: 70804621F2FEE
+  expected_values:
+    TOYOTA_FLI: 93.33333
+- response: 70804621F2FF5
+  expected_values:
+    TOYOTA_FLI: 96.07843
 - response: 70804621F2FFA
   expected_values:
     TOYOTA_FLI: 98.03922
