--- a/tests/test_cases/2014/command_support.yaml
+++ b/tests/test_cases/2014/command_support.yaml
@@ -1,4 +1,4 @@
-model_year: 2020
+model_year: 2014
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 supported_commands_by_ecu:
@@ -38,7 +38,6 @@ supported_commands_by_ecu:
   - 0143:LOAD_ABS
   - 0144:EQ_RAT
   - 0145:TP_R
-  - 0146:AAT
   - 0147:TP_B
   - 0149:APP_D
   - 014A:APP_E
@@ -46,18 +45,44 @@ supported_commands_by_ecu:
   - 014D:MIL_TIME
   - 014E:CLR_TIME
   - 0151:FUEL_TYP
+  - 0152:ALCH_PCT
   - 0153:EVAP_VPA
-  - 0155:STSO2FT1
-  - 0156:LGSO2FT1
-  - 0157:STSO2FT2
-  - 0158:LGSO2FT2
-  - 0162:TQ_ACT
-  - 0163:TQ_REF
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
-  - 018E:TQ_FR
-  - 019D:FUEL_RATE_ALT,VFUEL_RATE
-  - 019E:EXH_RATE
-  - 01A6:ODO
 unsupported_commands_by_ecu:
   700:
+  - '700.221059'
+  - '700.221074'
+  - '700.221638'
   - 700.221F2F
+  701:
+  - 701.709.220103
+  - 701.709.221627
+  - 701.709.221628
+  745:
+  - 745.74D.221739
+  747:
+  - 747.74F.220103
+  - 747.74F.22182E
+  750:
+  - '750.2115'
+  - '750.2116'
+  - 750.758.2130
+  - 750.758.221004
+  - 750.758.221005
+  - 750.758.222021
+  7B0:
+  - 7B0.221006
+  7B1:
+  - 7B1.221026
+  7B3:
+  - 7B3.221004
+  7C0:
+  - 7C0.221021
+  - 7C0.221022
+  - 7C0.7C8.2129
+  7D0:
+  - 7D0.2162
+  7D2:
+  - 7D2.221F5B
+  - 7D2.7DA.22106C
+  - 7D2.7DA.221F0D
