--- a/tests/test_cases/2019/commands/7E0.0131.yaml
+++ b/tests/test_cases/2019/commands/7E0.0131.yaml
@@ -440,3 +440,174 @@ test_cases:
 - response: 7E80441310DB3
   expected_values:
     CLR_DIST: 3507
+- response: 7E80441310DB4
+  expected_values:
+    CLR_DIST: 3508
+- response: 7E80441310DB5
+  expected_values:
+    CLR_DIST: 3509
+- response: 7E80441310DC1
+  expected_values:
+    CLR_DIST: 3521
+- response: 7E80441310DC2
+  expected_values:
+    CLR_DIST: 3522
+- response: 7E80441310DC3
+  expected_values:
+    CLR_DIST: 3523
+- response: 7E80441310DC4
+  expected_values:
+    CLR_DIST: 3524
+- response: 7E80441310DC5
+  expected_values:
+    CLR_DIST: 3525
+- response: 7E80441310DC6
+  expected_values:
+    CLR_DIST: 3526
+- response: 7E80441310DC7
+  expected_values:
+    CLR_DIST: 3527
+- response: 7E80441310DC8
+  expected_values:
+    CLR_DIST: 3528
+- response: 7E80441310DC9
+  expected_values:
+    CLR_DIST: 3529
+- response: 7E80441310DCA
+  expected_values:
+    CLR_DIST: 3530
+- response: 7E80441310DCB
+  expected_values:
+    CLR_DIST: 3531
+- response: 7E80441310DCC
+  expected_values:
+    CLR_DIST: 3532
+- response: 7E80441310DCD
+  expected_values:
+    CLR_DIST: 3533
+- response: 7E80441310DCE
+  expected_values:
+    CLR_DIST: 3534
+- response: 7E80441310DCF
+  expected_values:
+    CLR_DIST: 3535
+- response: 7E80441310DD0
+  expected_values:
+    CLR_DIST: 3536
+- response: 7E80441310DD1
+  expected_values:
+    CLR_DIST: 3537
+- response: 7E80441310DD2
+  expected_values:
+    CLR_DIST: 3538
+- response: 7E80441310DD3
+  expected_values:
+    CLR_DIST: 3539
+- response: 7E80441310DD4
+  expected_values:
+    CLR_DIST: 3540
+- response: 7E80441310DD5
+  expected_values:
+    CLR_DIST: 3541
+- response: 7E80441310DD6
+  expected_values:
+    CLR_DIST: 3542
+- response: 7E80441310DD7
+  expected_values:
+    CLR_DIST: 3543
+- response: 7E80441310DD8
+  expected_values:
+    CLR_DIST: 3544
+- response: 7E80441310DD9
+  expected_values:
+    CLR_DIST: 3545
+- response: 7E80441310DDA
+  expected_values:
+    CLR_DIST: 3546
+- response: 7E80441310DDB
+  expected_values:
+    CLR_DIST: 3547
+- response: 7E80441310DDC
+  expected_values:
+    CLR_DIST: 3548
+- response: 7E80441310DDD
+  expected_values:
+    CLR_DIST: 3549
+- response: 7E80441310DDE
+  expected_values:
+    CLR_DIST: 3550
+- response: 7E80441310DDF
+  expected_values:
+    CLR_DIST: 3551
+- response: 7E80441310DE0
+  expected_values:
+    CLR_DIST: 3552
+- response: 7E80441310DE1
+  expected_values:
+    CLR_DIST: 3553
+- response: 7E80441310DE2
+  expected_values:
+    CLR_DIST: 3554
+- response: 7E80441310DE3
+  expected_values:
+    CLR_DIST: 3555
+- response: 7E80441310DE4
+  expected_values:
+    CLR_DIST: 3556
+- response: 7E80441310DE5
+  expected_values:
+    CLR_DIST: 3557
+- response: 7E80441310DE6
+  expected_values:
+    CLR_DIST: 3558
+- response: 7E80441310DE7
+  expected_values:
+    CLR_DIST: 3559
+- response: 7E80441310DE8
+  expected_values:
+    CLR_DIST: 3560
+- response: 7E80441310DE9
+  expected_values:
+    CLR_DIST: 3561
+- response: 7E80441310DEA
+  expected_values:
+    CLR_DIST: 3562
+- response: 7E80441310DEB
+  expected_values:
+    CLR_DIST: 3563
+- response: 7E80441310DEC
+  expected_values:
+    CLR_DIST: 3564
+- response: 7E80441310DED
+  expected_values:
+    CLR_DIST: 3565
+- response: 7E80441310DEE
+  expected_values:
+    CLR_DIST: 3566
+- response: 7E80441310DEF
+  expected_values:
+    CLR_DIST: 3567
+- response: 7E80441310DF0
+  expected_values:
+    CLR_DIST: 3568
+- response: 7E80441310DF1
+  expected_values:
+    CLR_DIST: 3569
+- response: 7E80441310DF2
+  expected_values:
+    CLR_DIST: 3570
+- response: 7E80441310DF3
+  expected_values:
+    CLR_DIST: 3571
+- response: 7E80441310DF4
+  expected_values:
+    CLR_DIST: 3572
+- response: 7E80441310DF5
+  expected_values:
+    CLR_DIST: 3573
+- response: 7E80441310DF6
+  expected_values:
+    CLR_DIST: 3574
+- response: 7E80441310DF7
+  expected_values:
+    CLR_DIST: 3575
