--- a/tests/test_cases/2021/commands/7B0.7B8.2121.yaml
+++ b/tests/test_cases/2021/commands/7B0.7B8.2121.yaml
@@ -11,6 +11,15 @@ test_cases:
 - response: 7B803612103
   expected_values:
     TOYOTA_VSS_V2: 3.84
+- response: 7B803612104
+  expected_values:
+    TOYOTA_VSS_V2: 5.12
+- response: 7B803612107
+  expected_values:
+    TOYOTA_VSS_V2: 8.96
+- response: 7B803612109
+  expected_values:
+    TOYOTA_VSS_V2: 11.52
 - response: 7B80361210A
   expected_values:
     TOYOTA_VSS_V2: 12.8
@@ -23,6 +32,9 @@ test_cases:
 - response: 7B803612111
   expected_values:
     TOYOTA_VSS_V2: 21.76
+- response: 7B803612112
+  expected_values:
+    TOYOTA_VSS_V2: 23.04
 - response: 7B803612113
   expected_values:
     TOYOTA_VSS_V2: 24.32
@@ -41,6 +53,9 @@ test_cases:
 - response: 7B80361211C
   expected_values:
     TOYOTA_VSS_V2: 35.84
+- response: 7B80361211D
+  expected_values:
+    TOYOTA_VSS_V2: 37.12
 - response: 7B80361211E
   expected_values:
     TOYOTA_VSS_V2: 38.4
@@ -65,6 +80,9 @@ test_cases:
 - response: 7B803612126
   expected_values:
     TOYOTA_VSS_V2: 48.64
+- response: 7B803612127
+  expected_values:
+    TOYOTA_VSS_V2: 49.92
 - response: 7B803612128
   expected_values:
     TOYOTA_VSS_V2: 51.2
@@ -89,6 +107,12 @@ test_cases:
 - response: 7B80361212F
   expected_values:
     TOYOTA_VSS_V2: 60.16
+- response: 7B803612130
+  expected_values:
+    TOYOTA_VSS_V2: 61.44
+- response: 7B803612131
+  expected_values:
+    TOYOTA_VSS_V2: 62.72
 - response: 7B803612133
   expected_values:
     TOYOTA_VSS_V2: 65.28
