--- a/tests/test_cases/2021/commands/7E0.0162.yaml
+++ b/tests/test_cases/2021/commands/7E0.0162.yaml
@@ -26,9 +26,18 @@ test_cases:
 - response: 7E80341628A
   expected_values:
     TQ_ACT: 13
+- response: 7E80341628C
+  expected_values:
+    TQ_ACT: 15
 - response: 7E80341628D
   expected_values:
     TQ_ACT: 16
+- response: 7E80341628E
+  expected_values:
+    TQ_ACT: 17
+- response: 7E80341628F
+  expected_values:
+    TQ_ACT: 18
 - response: '7E803416290'
   expected_values:
     TQ_ACT: 19
@@ -44,6 +53,9 @@ test_cases:
 - response: '7E803416297'
   expected_values:
     TQ_ACT: 26
+- response: '7E803416299'
+  expected_values:
+    TQ_ACT: 28
 - response: 7E80341629A
   expected_values:
     TQ_ACT: 29
@@ -53,18 +65,27 @@ test_cases:
 - response: 7E80341629D
   expected_values:
     TQ_ACT: 32
+- response: 7E8034162A3
+  expected_values:
+    TQ_ACT: 38
 - response: 7E8034162A4
   expected_values:
     TQ_ACT: 39
 - response: 7E8034162A6
   expected_values:
     TQ_ACT: 41
+- response: 7E8034162A7
+  expected_values:
+    TQ_ACT: 42
 - response: 7E8034162A8
   expected_values:
     TQ_ACT: 43
 - response: 7E8034162A9
   expected_values:
     TQ_ACT: 44
+- response: 7E8034162AA
+  expected_values:
+    TQ_ACT: 45
 - response: 7E8034162AD
   expected_values:
     TQ_ACT: 48
