--- a/tests/test_cases/2021/commands/7E0.7E8.2182.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2182.yaml
@@ -2,10 +2,22 @@ command_id: 7E0.7E8.2182
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: '7E806618232003520'
+  expected_values:
+    TOYOTA_ATF_PAN_T: 10
+    TOYOTA_ATF_TQC_T: 13.125
 - response: 7E806618233E038E0
   expected_values:
     TOYOTA_ATF_PAN_T: 11.875
     TOYOTA_ATF_TQC_T: 16.875
+- response: 7E806618235C03840
+  expected_values:
+    TOYOTA_ATF_PAN_T: 13.75
+    TOYOTA_ATF_TQC_T: 16.25
+- response: 7E806618236603DE0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 14.375
+    TOYOTA_ATF_TQC_T: 21.875
 - response: 7E806618237A038E0
   expected_values:
     TOYOTA_ATF_PAN_T: 15.625
@@ -18,6 +30,14 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 16.25
     TOYOTA_ATF_TQC_T: 23.75
+- response: 7E806618239803E80
+  expected_values:
+    TOYOTA_ATF_PAN_T: 17.5
+    TOYOTA_ATF_TQC_T: 22.5
+- response: 7E80661823B604240
+  expected_values:
+    TOYOTA_ATF_PAN_T: 19.375
+    TOYOTA_ATF_TQC_T: 26.25
 - response: 7E80661823C0041A0
   expected_values:
     TOYOTA_ATF_PAN_T: 20
@@ -30,14 +50,42 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 20.625
     TOYOTA_ATF_TQC_T: 29.375
+- response: 7E80661823DE03E80
+  expected_values:
+    TOYOTA_ATF_PAN_T: 21.875
+    TOYOTA_ATF_TQC_T: 22.5
+- response: 7E80661823DE04240
+  expected_values:
+    TOYOTA_ATF_PAN_T: 21.875
+    TOYOTA_ATF_TQC_T: 26.25
+- response: 7E80661823DE04380
+  expected_values:
+    TOYOTA_ATF_PAN_T: 21.875
+    TOYOTA_ATF_TQC_T: 27.5
+- response: 7E80661823FC041A0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 23.75
+    TOYOTA_ATF_TQC_T: 25.625
 - response: 7E80661823FC04560
   expected_values:
     TOYOTA_ATF_PAN_T: 23.75
     TOYOTA_ATF_TQC_T: 29.375
+- response: '7E806618240604060'
+  expected_values:
+    TOYOTA_ATF_PAN_T: 24.375
+    TOYOTA_ATF_TQC_T: 24.375
 - response: 7E8066182406046A0
   expected_values:
     TOYOTA_ATF_PAN_T: 24.375
     TOYOTA_ATF_TQC_T: 30.625
+- response: 7E8066182410044C0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 25
+    TOYOTA_ATF_TQC_T: 28.75
+- response: 7E806618241A042E0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 25.625
+    TOYOTA_ATF_TQC_T: 26.875
 - response: 7E806618241A04420
   expected_values:
     TOYOTA_ATF_PAN_T: 25.625
@@ -50,6 +98,18 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 26.875
     TOYOTA_ATF_TQC_T: 28.75
+- response: 7E806618242E04560
+  expected_values:
+    TOYOTA_ATF_PAN_T: 26.875
+    TOYOTA_ATF_TQC_T: 29.375
+- response: 7E806618242E04740
+  expected_values:
+    TOYOTA_ATF_PAN_T: 26.875
+    TOYOTA_ATF_TQC_T: 31.25
+- response: 7E8066182438046A0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 27.5
+    TOYOTA_ATF_TQC_T: 30.625
 - response: '7E806618243804880'
   expected_values:
     TOYOTA_ATF_PAN_T: 27.5
@@ -62,6 +122,10 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 28.125
     TOYOTA_ATF_TQC_T: 30
+- response: '7E806618245604740'
+  expected_values:
+    TOYOTA_ATF_PAN_T: 29.375
+    TOYOTA_ATF_TQC_T: 31.25
 - response: '7E806618246004600'
   expected_values:
     TOYOTA_ATF_PAN_T: 30
@@ -78,6 +142,18 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 31.25
     TOYOTA_ATF_TQC_T: 34.375
+- response: 7E806618247404B00
+  expected_values:
+    TOYOTA_ATF_PAN_T: 31.25
+    TOYOTA_ATF_TQC_T: 35
+- response: 7E806618247404CE0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 31.25
+    TOYOTA_ATF_TQC_T: 36.875
+- response: 7E806618247E04CE0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 31.875
+    TOYOTA_ATF_TQC_T: 36.875
 - response: 7E806618249204B00
   expected_values:
     TOYOTA_ATF_PAN_T: 33.125
@@ -90,10 +166,22 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 33.75
     TOYOTA_ATF_TQC_T: 37.5
+- response: 7E806618249C050A0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 33.75
+    TOYOTA_ATF_TQC_T: 40.625
+- response: 7E80661824A604E20
+  expected_values:
+    TOYOTA_ATF_PAN_T: 34.375
+    TOYOTA_ATF_TQC_T: 38.125
 - response: 7E80661824B004BA0
   expected_values:
     TOYOTA_ATF_PAN_T: 35
     TOYOTA_ATF_TQC_T: 35.625
+- response: 7E80661824BA04E20
+  expected_values:
+    TOYOTA_ATF_PAN_T: 35.625
+    TOYOTA_ATF_TQC_T: 38.125
 - response: 7E80661824C404BA0
   expected_values:
     TOYOTA_ATF_PAN_T: 36.25
@@ -106,10 +194,22 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 36.875
     TOYOTA_ATF_TQC_T: 41.875
+- response: 7E80661824D804EC0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 37.5
+    TOYOTA_ATF_TQC_T: 38.75
+- response: 7E80661824D8051E0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 37.5
+    TOYOTA_ATF_TQC_T: 41.875
 - response: 7E80661824EC051E0
   expected_values:
     TOYOTA_ATF_PAN_T: 38.75
     TOYOTA_ATF_TQC_T: 41.875
+- response: 7E80661824F605280
+  expected_values:
+    TOYOTA_ATF_PAN_T: 39.375
+    TOYOTA_ATF_TQC_T: 42.5
 - response: '7E806618250005500'
   expected_values:
     TOYOTA_ATF_PAN_T: 40
@@ -118,10 +218,26 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 40.625
     TOYOTA_ATF_TQC_T: 41.25
+- response: 7E806618251E053C0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 41.875
+    TOYOTA_ATF_TQC_T: 43.75
 - response: 7E8066182532058C0
   expected_values:
     TOYOTA_ATF_PAN_T: 43.125
     TOYOTA_ATF_TQC_T: 48.75
+- response: 7E806618253C05500
+  expected_values:
+    TOYOTA_ATF_PAN_T: 43.75
+    TOYOTA_ATF_TQC_T: 45
+- response: 7E806618253C05960
+  expected_values:
+    TOYOTA_ATF_PAN_T: 43.75
+    TOYOTA_ATF_TQC_T: 49.375
+- response: '7E806618255005460'
+  expected_values:
+    TOYOTA_ATF_PAN_T: 45
+    TOYOTA_ATF_TQC_T: 44.375
 - response: 7E806618255005FA0
   expected_values:
     TOYOTA_ATF_PAN_T: 45
