--- a/tests/test_cases/2024/commands/700.221059.yaml
+++ b/tests/test_cases/2024/commands/700.221059.yaml
@@ -33,13 +33,83 @@ test_cases:
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
+    708100A621059305928
+    7082151031E00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059305929
+    708215102FD00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059305929
+    708215202DE00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
     708100A621059325B28
     7082151042100000000
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
+    708100A621059325B29
+    708215103F800000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059325C29
+    7082151045100000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059335C28
+    7082151046E00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059335C29
+    7082151045C00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
     708100A621059335D29
     708215104F000000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059345D28
+    7082151050700000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059355E28
+    708215105AB00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059355E28
+    708215105E300000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059355E29
+    7082151058500000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059365F28
+    7082151064200000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059365F28
+    7082151067500000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059365F29
+    7082151066300000000
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
@@ -53,8 +123,18 @@ test_cases:
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
+    708100A621059386128
+    7082151079700000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
     708100A621059386228
     708215107C200000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
+    708100A621059396228
+    708215107DE00000000
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
@@ -63,10 +143,20 @@ test_cases:
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
+    708100A621059396329
+    7082151082100000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+- response: |-
     708100A6210593B6428
     7082151092100000000
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0.5493
+- response: |-
+    708100A6210593C6528
+    708215109AE00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 1.25352
 - response: |-
     708100A6210593D6629
     70821510A2E00000000
@@ -83,15 +173,55 @@ test_cases:
   expected_values:
     TOYOTA_ACCEL_PEDAL: 2.66197
 - response: |-
+    708100A6210593F6828
+    70821510B6100000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 3.3662
+- response: |-
+    708100A621059406928
+    70821510BD100000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 4.07042
+- response: |-
+    708100A621059436C28
+    70821510D4200000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 6.1831
+- response: |-
     708100A621059446E28
     70821510E6E00000000
   expected_values:
     TOYOTA_ACCEL_PEDAL: 6.88732
 - response: |-
+    708100A621059456F28
+    70821510ED700000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 7.59155
+- response: |-
+    708100A621059456F29
+    70821510EB000000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 7.59155
+- response: |-
     708100A621059467029
     70821510F3D00000000
   expected_values:
     TOYOTA_ACCEL_PEDAL: 8.29577
+- response: |-
+    708100A621059477028
+    70821510F9E00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 9
+- response: |-
+    708100A621059477029
+    70821510F7000000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 9
+- response: |-
+    708100A621059477128
+    70821510FCA00000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 9
 - response: |-
     708100A621059477128
     70821510FCF00000000
