--- a/tests/test_cases/2024/commands/701.709.220103.yaml
+++ b/tests/test_cases/2024/commands/701.709.220103.yaml
@@ -26,3 +26,27 @@ test_cases:
 - response: 7090762010302003CE2
   expected_values:
     TOYOTA_ODO_V3: 15586
+- response: 7090762010302003CE3
+  expected_values:
+    TOYOTA_ODO_V3: 15587
+- response: 7090762010302003CE4
+  expected_values:
+    TOYOTA_ODO_V3: 15588
+- response: 7090762010302003CE5
+  expected_values:
+    TOYOTA_ODO_V3: 15589
+- response: 7090762010302003CE6
+  expected_values:
+    TOYOTA_ODO_V3: 15590
+- response: 7090762010302003CE7
+  expected_values:
+    TOYOTA_ODO_V3: 15591
+- response: 7090762010302003CE8
+  expected_values:
+    TOYOTA_ODO_V3: 15592
+- response: 7090762010302003CE9
+  expected_values:
+    TOYOTA_ODO_V3: 15593
+- response: 7090762010302003CEA
+  expected_values:
+    TOYOTA_ODO_V3: 15594
