--- a/tests/test_cases/2024/commands/7C0.221021.yaml
+++ b/tests/test_cases/2024/commands/7C0.221021.yaml
@@ -26,6 +26,9 @@ test_cases:
 - response: 7C8046210217F
   expected_values:
     TOYOTA_BATTERY_VOLTAGE: 12.7
+- response: 7C80462102180
+  expected_values:
+    TOYOTA_BATTERY_VOLTAGE: 12.8
 - response: 7C80462102182
   expected_values:
     TOYOTA_BATTERY_VOLTAGE: 13
@@ -44,6 +47,9 @@ test_cases:
 - response: 7C8046210218C
   expected_values:
     TOYOTA_BATTERY_VOLTAGE: 14
+- response: 7C8046210218D
+  expected_values:
+    TOYOTA_BATTERY_VOLTAGE: 14.1
 - response: 7C80462102193
   expected_values:
     TOYOTA_BATTERY_VOLTAGE: 14.7
